# xreal

./: CONTRIBUTORS.txt  COPYING.txt  Makefile  NOTTODO.txt  README.md  README.txt  SConscript_base_game  SConscript_xmap2  SConscript_xreal  SConscript_xreal-server  SConstruct  TODO.txt  q3map2build.bdf  ql-mouse-accel.txt  uncrustify_xreal.bat  uncrustify_xreal.sh
code/server/: CMakeLists.txt  server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_rankings.c  sv_snapshot.c  sv_world.c
code/tools/gtkradiant/: CMakeLists.txt
code/tools/gtkradiant/cmake/: FindGLIB.cmake  FindGLX.cmake  FindGtkGLExt.cmake
code/tools/gtkradiant/include/: cullable.h  editable.h  iarchive.h  ibrush.h  icamera.h  idatastream.h  ieclass.h  ientity.h  ifilesystem.h  ifiletypes.h  ifilter.h  igl.h  iglrender.h  igtkgl.h  iimage.h  imap.h  ipatch.h  iplugin.h  irender.h  iscenegraph.h  iscriplib.h  iselection.h  ishaders.h  itexdef.h  itextstream.h  itextures.h  itoolbar.h  iundo.h  modelskin.h  modulesystem.h  preferencesystem.cpp  qerplugin.h  renderable.h  selectable.h
code/tools/gtkradiant/libs/: CMakeLists.txt  archivelib.h  cmdlib.h  convert.h  dragplanes.h  eclasslib.h  entitylib.h  entityxml.h  fs_filesystem.h  fs_path.h  imagelib.h  instancelib.h  libs.vcproj  maplib.h  mathlib.h  moduleobservers.h  picomodel.h  pivot.h  render.h  scenelib.h  selectionlib.h  shaderlib.h  str.h  stringio.h  texturelib.h  transformlib.h  traverselib.h  typesystem.h  undolib.h  uniquenames.h  versionlib.h
code/tools/gtkradiant/libs/cmdlib/: CmakeLists.txt  cmdlib.cpp
code/tools/gtkradiant/libs/container/: CMakeLists.txt  array.cpp  array.h  cache.h  container.h  hashfunc.h  hashtable.cpp  hashtable.h  stack.h
code/tools/gtkradiant/libs/ddslib/: CMakeLists.txt
code/tools/gtkradiant/libs/debugging/: CMakeLists.txt  debugging.h
code/tools/gtkradiant/libs/generic/: CMakeLists.txt  arrayrange.h  bitfield.h  callback.cpp  callback.h  constant.h  enumeration.h  functional.h  object.cpp  object.h  reference.h  referencecounted.h  static.cpp  static.h  vector.h
code/tools/gtkradiant/libs/gtkutil/: CMakeLists.txt  accelerator.cpp  accelerator.h  button.cpp  clipboard.h  cursor.cpp  cursor.h  dialog.h  filechooser.cpp  filechooser.h  glfont.cpp  glfont.h  glwidget.cpp  glwidget.h  gtkutil.vcproj  idledraw.h  menu.cpp  messagebox.h  nonmodal.h  paned.cpp  widget.h  window.h  xorrectangle.h
code/tools/gtkradiant/libs/l_net/: CMakeLists.txt  l_net.c  l_net.h  l_net_berkley.c  l_net_wins.c
code/tools/gtkradiant/libs/math/: CMakeLists.txt  aabb.h  expression.cpp  expression.h  frustum.h  line.h  matrix.h  plane.h  quaternion.h  vector.h
code/tools/gtkradiant/libs/mathlib/: CMakeLists.txt  bbox.c  line.c  m4x4.c  mathlib.c  ray.c
code/tools/gtkradiant/libs/memory/: CmakeLists.txt  allocator.cpp  allocator.h
code/tools/gtkradiant/libs/modulesystem/: CmakeLists.txt  moduleregistry.h  modulesmap.h  singletonmodule.h
code/tools/gtkradiant/libs/os/: CmakeLists.txt  dir.h  path.h
code/tools/gtkradiant/libs/picomodel/: CmakeLists.txt  picointernal.c  picointernal.h  picomodel.c  picomodel.vcproj  pm_ase.c  pm_lwo.c  pm_obj.c
code/tools/gtkradiant/libs/profile/: CMakeLists.txt  file.h
code/tools/gtkradiant/libs/script/: CmakeLists.txt  scripttokeniser.h  scripttokenwriter.h
code/tools/gtkradiant/libs/signal/: CmakeLists.txt  isignal.h  signal.h  signalfwd.h
code/tools/gtkradiant/libs/stream/: CMakeLists.txt  filestream.h  memstream.h  stringstream.h  textfilestream.h  textstream.h
code/tools/gtkradiant/libs/string/: CmakeLists.txt  pooledstring.cpp  pooledstring.h  string.h
code/tools/gtkradiant/libs/xml/: CmakeLists.txt  xmlelement.h  xmlparser.h  xmltextags.h  xmlwriter.h
code/tools/gtkradiant/plugins/: CmakeLists.txt
code/tools/gtkradiant/plugins/archivezip/: CmakeLists.txt  archive.cpp  pkzip.h  plugin.cpp  zlibstream.h
code/tools/gtkradiant/plugins/brushexport/: CmakeLists.txt  callbacks.cpp  callbacks.h  export.cpp  interface.cpp  plugin.cpp
code/tools/gtkradiant/plugins/entity/: CMakeLists.txt  angle.h  angles.h  colour.h  curve.h  doom3group.cpp  eclassmodel.cpp  entity.cpp  entity.h  entityq3.vcproj  filters.cpp  filters.h  generic.cpp  group.cpp  light.cpp  miscmodel.cpp  model.h  modelskinkey.h  namedentity.h  namekeys.h  origin.h  plugin.cpp  rotation.h  scale.h  skincache.cpp  targetable.h
code/tools/gtkradiant/plugins/image/: CMakeLists.txt  bmp.cpp  image.cpp  jpeg.cpp  jpeg.h  tga.cpp
code/tools/gtkradiant/plugins/imagejpeg/: imagejpeg.def  imagejpeg.vcproj
code/tools/gtkradiant/plugins/imagepng/: CmakeLists.txt  imagepng.vcproj  plugin.cpp
code/tools/gtkradiant/plugins/mapq3/: CmakeLists.txt  mapq3.vcproj  parse.cpp  plugin.cpp  write.cpp
code/tools/gtkradiant/plugins/model/: CmakeLists.txt  model.cpp  (+1 more)
code/tools/gtkradiant/radiant/: CmakeLists.txt  GtkRadiant.vcproj  autosave.cpp  brush.cpp  brush.h  brush_primit.cpp  brush_primit.h  brushmanip.cpp  brushmanip.h  brushmodule.cpp  brushmodule.h  brushnode.h  brushtokens.h  brushxml.h  build.cpp  build.h  camwindow.cpp  camwindow.h  commands.cpp  commands.h  console.cpp  csg.cpp  dialog.cpp  dialog.h  eclass.cpp  eclass_def.cpp  eclass_doom3.cpp  eclass_fgd.cpp  eclass_xml.cpp  entity.cpp  entityinspector.cpp  entitylist.cpp  environment.cpp  environment.h  feedback.h  filetypes.cpp  filters.cpp  findtexturedialog.cpp  glwidget.cpp  grid.cpp  (+61 more)
code/tools/xmap/: CMakeLists.txt  brush_primit.c  bsp.c  convert_ase.c  convert_map.c  convert_t3dtomap.c  fog.c  gldraw.c  glfile.c  leakfile.c  light.h  main.c  mesh.c  nodraw.c  portals.c  qbsp.h  shaders.c  tjunction.c  visflow.c  writebsp.c
code/tools/xmap2/: CMakeLists.txt  brush_primit.c  bspfile_ibsp.c  bspfile_rbsp.c  decals.c  fog.c  game_quake3.h  image.c  light_bounce.c  light_ydnar.c  lightmaps_ydnar.c  main.c  map.c  mesh.c  prtfile.c  surface_foliage.c  tree.c  xmap2.sln
code/tools/xmass/: CMakeLists.txt  master.c  messages.h  servers.c
code/tools/xmaster/: CMakeLists.txt  common.h  master.c  messages.c  messages.h
(+973 files in other folders)
